Working on interactive service components

--- a/apps/geoservices-angular/src/styles.scss
+++ b/apps/geoservices-angular/src/styles.scss
@@ -873,3 +873,16 @@ tamu-gisc-step-toggle {
     }
   }
 }
+
+//
+// Card styles
+//
+
+.card {
+  border: 1pt solid lighten($inactive-color, 20%);
+  border-radius: 5pt;
+  padding: 0 1rem;
+  padding-bottom: 0.5rem;
+  box-sizing: border-box;
+  background: #ffffff;
+}
