Tweaked panels, changed language

--- a/apps/cpa-angular/src/app/modules/map/map.component.html
+++ b/apps/cpa-angular/src/app/modules/map/map.component.html
@@ -1,4 +1,4 @@
-<tamu-gisc-sidebar width="22.5rem" position="right">
+<tamu-gisc-sidebar width="22.5rem" position="right" visible="false">
   <div class="tabs left">
     <tamu-gisc-sidebar-tab [title]="'Features'" [description]="'Toggle Features (Search, Layers, Legend)'" [material_icon]="'menu'" [route]="''"></tamu-gisc-sidebar-tab>
   </div>
