--- a/libs/cpa/common/ngx/src/lib/modules/create/components/overview/overview.component.scss
+++ b/libs/cpa/common/ngx/src/lib/modules/create/components/overview/overview.component.scss
@@ -21,6 +21,7 @@
   .feature-picker-icon {
     font-size: 1.75rem;
     padding: 0.7rem 1rem;
+    padding-left: 0;
   }
 
   .feature-picker-name {
