--- a/libs/cpa/common/ngx/src/lib/modules/create/components/scenarios-list/scenarios-list.component.html
+++ b/libs/cpa/common/ngx/src/lib/modules/create/components/scenarios-list/scenarios-list.component.html
@@ -1,5 +1,5 @@
 <div class="actionable-header">
-  <h2>CCPA: Scenarios</h2>
+  <h2>CCPA: Snapshots</h2>
 
   <div class="material-icons-container">
     <div class="material-icons alt action" title="Add Workshop" [routerLink]="['create']" routerLinkActive="router-link-active">add_circle_outline</div>
