--- a/libs/cpa/common/ngx/src/lib/modules/create/create.component.html
+++ b/libs/cpa/common/ngx/src/lib/modules/create/create.component.html
@@ -1,4 +1,4 @@
-<tamu-gisc-drawer [width]="'35rem'" [position]="'left'">
+<tamu-gisc-drawer width="25rem" [position]="'left'">
   <div class="content">
     <router-outlet></router-outlet>
   </div>
