--- a/libs/cpa/common/ngx/src/lib/modules/forms/components/participant/participant.component.html
+++ b/libs/cpa/common/ngx/src/lib/modules/forms/components/participant/participant.component.html
@@ -66,15 +66,15 @@
 
 <div class="actions">
   <div class="left-actions">
-    <div class="action" title="Previous Scenario" [ngClass]="{ unavailable: (scenarioIndex | async) === 0 }" (click)="scanScenario('prev')">
+    <div class="action" title="Previous Snapshot" [ngClass]="{ unavailable: (scenarioIndex | async) === 0 }" (click)="scanScenario('prev')">
       <span class="material-icons">keyboard_arrow_left</span>
-      <p>Previous Scenario</p>
+      <p>Previous Snapshot</p>
     </div>
   </div>
 
   <div class="right-actions">
-    <div class="action" title="Next Scenario" [ngClass]="{ unavailable: (scenarioIndex | async) === (workshop | async)?.scenarios.length - 1 }" (click)="scanScenario('next')">
-      <p>Next Scenario</p>
+    <div class="action" title="Next Snapshot" [ngClass]="{ unavailable: (scenarioIndex | async) === (workshop | async)?.scenarios.length - 1 }" (click)="scanScenario('next')">
+      <p>Next Snapshot</p>
       <span class="material-icons">keyboard_arrow_right</span>
     </div>
   </div>
