--- a/libs/cpa/common/ngx/src/lib/modules/forms/components/workshop-builder/workshop-builder.component.html
+++ b/libs/cpa/common/ngx/src/lib/modules/forms/components/workshop-builder/workshop-builder.component.html
@@ -25,13 +25,13 @@
   <div class="form-section" *ngIf="isExisting | async">
     <div class="form-section-toolbar">
       <div class="form-section-title">
-        <p>Scenarios</p>
+        <p>Snapshots</p>
       </div>
     </div>
 
     <div class="form-section-body">
       <div class="form-collection row">
-        <tamu-gisc-select [data]="scenarioList | async" placeholder="Select a scenario" [displayTemplate]="'title'" (changed)="submitWorkshop($event)"></tamu-gisc-select>
+        <tamu-gisc-select [data]="scenarioList | async" placeholder="Select a snapshot" [displayTemplate]="'title'" (changed)="submitWorkshop($event)"></tamu-gisc-select>
       </div>
 
       <div class="form-collection column" *ngIf="form.controls?.scenarios.value.length > 0">
@@ -43,7 +43,7 @@
         </div>
       </div>
 
-      <p *ngIf="form.controls?.scenarios.value.length === 0">There are no associated scenarios with this workshop. Select a scenario from the above list to add.</p>
+      <p *ngIf="form.controls?.scenarios.value.length === 0">There are no associated snapshots with this workshop. Select a snapshot from the above list to add.</p>
     </div>
   </div>
 
