Restylized the registration view

--- a/apps/oidc-provider-nest/src/assets/views/login.ejs
+++ b/apps/oidc-provider-nest/src/assets/views/login.ejs
@@ -1,6 +1,6 @@
 <form autocomplete="off" method="post">
   <input type="hidden" name="uuid" value="<%= details.uuid %>" />
-  <input required autofocus type="text" name="login" placeholder="Email" />
+  <input required type="text" name="login" placeholder="Email" autofocus="true" />
   <input required type="password" name="password" placeholder="Password" />
 
   <label><input type="checkbox" name="remember" value="yes" checked="yes" />Stay signed in</label>
