Trying to setup UserRepo and AccountRepo

--- a/apps/oidc-provider-nest/src/assets/views/register.ejs
+++ b/apps/oidc-provider-nest/src/assets/views/register.ejs
@@ -1,6 +1,6 @@
 <form autocomplete="off" action="/user/register" method="post">
   <input required type="text" name="name" placeholder="Name" autofocus="on" />
-  <input required type="text" name="login" placeholder="Email" />
+  <input required type="text" name="email" placeholder="Email" />
   <input required type="password" name="password" placeholder="Password" />
   <input required type="password" name="confirm_password" placeholder="Confirm Password" />
   <% if (error) { %>
