Slowly adding in 2FA functions

--- a/apps/oidc-provider-nest/src/assets/views/user-info.ejs
+++ b/apps/oidc-provider-nest/src/assets/views/user-info.ejs
@@ -6,7 +6,7 @@
   <%}%>
 
   <div class="form-input">
-    <input required type="text" name="login" class="error-input" placeholder="Email" />
+    <input required type="text" name="email" class="error-input" placeholder="Email" />
   </div>
 
   <div class="form-input">
