--- a/apps/oidc-provider-nest/src/assets/views/2fa-auth.ejs
+++ b/apps/oidc-provider-nest/src/assets/views/2fa-auth.ejs
@@ -1,12 +1,14 @@
-<form autocomplete="off" action="/interaction/<%= details.uuid %>/2fa" method="post">
-  <input type="hidden" name="uuid" value="<%= details.uuid %>"/>
-  <input type="hidden" name="result" value="<%= result %>"/>
-  <input type="hidden" name="sub" value="<%= sub %>"/>
-  <input type="hidden" name="email" value="<%= email %>"/>
+<form autocomplete="off" action="/interaction/<%= details.uid %>/2fa" method="post">
+  <input type="hidden" name="uuid" value="<%= details.uid %>" />
+  <input type="hidden" name="result" value="<%= result %>" />
+  <input type="hidden" name="guid" value="<%= guid %>" />
+  <input type="hidden" name="email" value="<%= email %>" />
 
-  <% if (error) {%> <p id="error-message"><%= message %></p> <%}%>
+  <% if (error) {%>
+  <p id="error-message"><%= message %></p>
+  <%}%>
   <p>Enter the 6 digit code from your authenticator app</p>
-  <input required type="text" name="token" class="error-input" placeholder="6 digit code" <% if (!details.params.login_hint) { %>autofocus="on"<% } else { %> value="<%= details.params.login_hint %>" <% } %>>
+  <input required type="text" name="token" class="error-input" placeholder="6 digit code" autofocus="on" />
 
   <button type="submit" class="login login-submit">Check code</button>
 </form>
