--- a/apps/oidc-provider-nest/src/assets/views/user-info.ejs
+++ b/apps/oidc-provider-nest/src/assets/views/user-info.ejs
@@ -6,7 +6,7 @@
   <%}%>
 
   <div class="form-input">
-    <input required type="text" name="email" class="error-input" placeholder="Email" />
+    <input required type="text" name="email" class="error-input" placeholder="Email" autofocus="true" />
   </div>
 
   <div class="form-input">
@@ -31,6 +31,10 @@
   </div>
 
   <div class="account-register-prompt">
+    <%if (!devMode) { %>
+    <p>Don't have an account? <a href="http://localhost:4001/user/register">Get started</a>.</p>
+    <%} else { %>
     <p>Don't have an account? <a href="http://">Get started</a>.</p>
+    <%} %>
   </div>
 </form>
