Secret questions / answers

--- a/apps/oidc-provider-nest/src/assets/styles/styles.css
+++ b/apps/oidc-provider-nest/src/assets/styles/styles.css
@@ -197,3 +197,12 @@ input[type='checkbox'] label {
 .authorize-instructions {
   margin-bottom: 2rem;
 }
+
+.dropdown {
+  border: 0px;
+  outline: 0px;
+}
+
+.dropdown-option {
+  background: '#fcfdfd';
+}
