--- a/apps/oidc-provider-nest/src/assets/views/password-reset.ejs
+++ b/apps/oidc-provider-nest/src/assets/views/password-reset.ejs
@@ -1,13 +1,14 @@
-<form autocomplete="off" action="/pwr/<%= token %>" method="post">
-  <input type="hidden" name="sub" value="<%= sub %>"/>
-  <input type="hidden" name="question1" value="<%= questions[0].id %>"/>
-  <input type="hidden" name="question2" value="<%= questions[1].id %>"/>
+<form autocomplete="off" action="/user/pwr/<%= token %>" method="post">
+  <input type="hidden" name="guid" value="<%= guid %>" />
+  <input type="hidden" name="token" value="<%= token %>" />
+  <input type="hidden" name="question1" value="<%= questions[0].id %>" />
+  <input type="hidden" name="question2" value="<%= questions[1].id %>" />
 
   <h3 required type="text" name="question1" class="error-input"><%= questions[0].text %></h3>
-  <input required type="text" name="answer1" autofocus="on">
+  <input required type="text" name="answer1" autofocus />
 
   <h3 required type="text" name="question2" class="error-input"><%= questions[1].text %></h3>
-  <input required type="text" name="answer2" autofocus="on">
+  <input required type="text" name="answer2" />
 
   <button type="submit" class="login login-submit">Submit</button>
 </form>
