--- a/apps/oidc-provider-nest/src/assets/views/password-reset.ejs
+++ b/apps/oidc-provider-nest/src/assets/views/password-reset.ejs
@@ -1,8 +1,8 @@
 <form autocomplete="off" action="/user/pwr/<%= token %>" method="post">
   <input type="hidden" name="guid" value="<%= guid %>" />
   <input type="hidden" name="token" value="<%= token %>" />
-  <input type="hidden" name="question1" value="<%= questions[0].id %>" />
-  <input type="hidden" name="question2" value="<%= questions[1].id %>" />
+  <input type="hidden" name="question1" value="<%= questions[0].guid %>" />
+  <input type="hidden" name="question2" value="<%= questions[1].guid %>" />
 
   <h3 required type="text" name="question1" class="error-input"><%= questions[0].text %></h3>
   <input required type="text" name="answer1" autofocus />
