Password reset now works

--- a/apps/oidc-provider-nest/src/assets/views/password-reset.ejs
+++ b/apps/oidc-provider-nest/src/assets/views/password-reset.ejs
@@ -4,10 +4,10 @@
   <input type="hidden" name="question1" value="<%= questions[0].guid %>" />
   <input type="hidden" name="question2" value="<%= questions[1].guid %>" />
 
-  <h3 required type="text" name="question1" class="error-input"><%= questions[0].text %></h3>
+  <h3 required type="text" class="error-input"><%= questions[0].text %></h3>
   <input required type="text" name="answer1" autofocus />
 
-  <h3 required type="text" name="question2" class="error-input"><%= questions[1].text %></h3>
+  <h3 required type="text" class="error-input"><%= questions[1].text %></h3>
   <input required type="text" name="answer2" />
 
   <button type="submit" class="login login-submit">Submit</button>
