--- a/apps/oidc-provider-nest/src/assets/views/new-password.ejs
+++ b/apps/oidc-provider-nest/src/assets/views/new-password.ejs
@@ -1,8 +1,8 @@
-<form autocomplete="off" action="/npw/<%= token %>" method="post">
-  <input type="hidden" name="token" value="<%= token %>"/>
+<form autocomplete="off" action="/user/npw/<%= token %>" method="post">
+  <input type="hidden" name="token" value="<%= token %>" />
 
   <h3 required type="text" name="text" class="error-input">New password:</h3>
-  <input required type="text" name="newPassword" autofocus="on">
+  <input required type="password" name="newPassword" autofocus="on" />
 
   <button type="submit" class="login login-submit">Reset password</button>
 </form>
