Stylized some password reset views

--- a/apps/oidc-provider-nest/src/assets/views/password-reset.ejs
+++ b/apps/oidc-provider-nest/src/assets/views/password-reset.ejs
@@ -9,6 +9,6 @@
 
   <h3 required type="text" class="error-input"><%= questions[1].text %></h3>
   <input required type="text" name="answer2" />
-
+  <p class="text center authorize-instructions"></p>
   <button type="submit" class="login login-submit">Submit</button>
 </form>
