Password strength enforced

--- a/apps/oidc-provider-nest/src/assets/styles/styles.css
+++ b/apps/oidc-provider-nest/src/assets/styles/styles.css
@@ -181,6 +181,11 @@ input[type='checkbox'] label {
   font-weight: 500;
 }
 
+#uservalidation-error-message {
+  color: red;
+  font-weight: 500;
+}
+
 .session-controls {
   margin: 1.5rem 0;
 }
