Cannot recycle old passwords

--- a/apps/oidc-provider-nest/src/assets/views/new-password.ejs
+++ b/apps/oidc-provider-nest/src/assets/views/new-password.ejs
@@ -1,8 +1,18 @@
+<% if (error) {%>
+<ul>
+  <% if (message) { %> <% message.map((errorMessage) => { %>
+  <li id="uservalidation-error-message"><%= errorMessage %></li>
+  <% }) %> <% } %>
+</ul>
+<%}%>
 <form autocomplete="off" action="/user/npw/<%= token %>" method="post">
   <input type="hidden" name="token" value="<%= token %>" />
 
   <h3 required type="text" name="text" class="error-input">New password:</h3>
   <input required type="password" name="newPassword" autofocus="on" />
+
+  <h3 required type="text" name="text" class="error-input">Confirm new password:</h3>
+  <input required type="password" name="newPassword_confirm" autofocus="on" />
 
   <button type="submit" class="login login-submit">Reset password</button>
 </form>
