--- a/apps/oidc-provider-nest/src/assets/views/password-reset.ejs
+++ b/apps/oidc-provider-nest/src/assets/views/password-reset.ejs
@@ -1,3 +1,6 @@
+<% if (error) {%>
+<p id="error-message"><%= message %></p>
+<%}%>
 <form autocomplete="off" action="/user/pwr/<%= token %>" method="post">
   <input type="hidden" name="guid" value="<%= guid %>" />
   <input type="hidden" name="token" value="<%= token %>" />
