Forgot password view added

--- a/apps/oidc-provider-nest/src/assets/views/user-info.ejs
+++ b/apps/oidc-provider-nest/src/assets/views/user-info.ejs
@@ -23,7 +23,7 @@
       </div>
     </div>
 
-    <div><a href="http://">Forgot password?</a></div>
+    <div><a href="../user/pwr">Forgot password?</a></div>
   </div>
 
   <div class="form-input">
