Side-drawer working; created user, roles, stats modules

--- a/apps/oidc-admin-angular/src/styles.scss
+++ b/apps/oidc-admin-angular/src/styles.scss
@@ -1013,6 +1013,10 @@ form {
   }
 }
 
+tamu-gisc-root {
+  height: inherit;
+}
+
 tamu-gisc-select select,
 input[type='date'] {
   font-family: $primary-font-family;
