--- a/apps/oidc-admin-angular/src/app/app.component.html
+++ b/apps/oidc-admin-angular/src/app/app.component.html
@@ -1,1 +1,29 @@
-<router-outlet></router-outlet>
+<tamu-gisc-drawer layout="relative" width="20rem">
+  <div class="content">
+    <div class="sidebar-menu">
+      <div class="menu-item" [routerLink]="['stats']" routerLinkActive="active">
+        <span class="material-icons">trending_up</span>
+        <p>Stats</p>
+      </div>
+
+      <div class="menu-item" [routerLink]="['users']" routerLinkActive="active">
+        <span class="material-icons">people</span>
+        <p>Users</p>
+      </div>
+
+      <div class="menu-item" [routerLink]="['roles']" routerLinkActive="active">
+        <span class="material-icons">security</span>
+        <p>Roles</p>
+      </div>
+
+      <div class="menu-item">
+        <span class="material-icons">login</span>
+        <p>Login</p>
+      </div>
+    </div>
+  </div>
+</tamu-gisc-drawer>
+
+<div id="root">
+  <router-outlet></router-outlet>
+</div>
