--- a/libs/oidc/admin/src/lib/modules/roles/roles.component.html
+++ b/libs/oidc/admin/src/lib/modules/roles/roles.component.html
@@ -1,3 +1,17 @@
 <section class="internal">
   <h1 class="section-header">Roles</h1>
+
+  <div class="section-content">
+    <div class="tab-container row">
+      <div class="tabs">
+        <div class="tab" [routerLink]="['./']" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">View</div>
+        <div class="tab" [routerLink]="['add']" routerLinkActive="active">Add</div>
+        <!-- <div class="tab" [routerLink]="['preferences']" routerLinkActive="active">Preferences</div> -->
+      </div>
+
+      <div class="tab-content">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
 </section>
