Added view, add, edit views for roles / users

--- a/libs/oidc/admin/src/lib/modules/roles/roles.component.html
+++ b/libs/oidc/admin/src/lib/modules/roles/roles.component.html
@@ -6,7 +6,7 @@
       <div class="tabs">
         <div class="tab" [routerLink]="['./']" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">View</div>
         <div class="tab" [routerLink]="['add']" routerLinkActive="active">Add</div>
-        <!-- <div class="tab" [routerLink]="['preferences']" routerLinkActive="active">Preferences</div> -->
+        <div class="tab" [routerLink]="['edit']" routerLinkActive="active">Edit</div>
       </div>
 
       <div class="tab-content">
