ClientMetadata layout added

--- a/apps/oidc-admin-angular/src/app/app.component.html
+++ b/apps/oidc-admin-angular/src/app/app.component.html
@@ -6,6 +6,11 @@
         <p>Stats</p>
       </div>
 
+      <div class="menu-item" [routerLink]="['client-metadata']" routerLinkActive="active">
+        <span class="material-icons">web</span>
+        <p>Client Metadata</p>
+      </div>
+
       <div class="menu-item" [routerLink]="['users']" routerLinkActive="active">
         <span class="material-icons">people</span>
         <p>Users</p>
