--- a/libs/oidc/admin/src/lib/modules/users/add-users/add-users.component.html
+++ b/libs/oidc/admin/src/lib/modules/users/add-users/add-users.component.html
@@ -26,7 +26,7 @@
 
     <div class="form-section-body">
       <div class="form-collection row">
-        <tamu-gisc-select formControlName="question" [data]="$questions | async" displayTemplate="Question" valueTemplate="Question"></tamu-gisc-select>
+        <tamu-gisc-select formControlName="question" [data]="$questions | async" displayTemplate="questionText" valueTemplate="questionText"></tamu-gisc-select>
 
         <tamu-gisc-textbox formControlName="answer" type="text" placeholder="Security Question Answer" floatLabel="true"></tamu-gisc-textbox>
       </div>
