ClientMetadataService returns transformed response

--- a/libs/oidc/admin/src/lib/modules/client-metadata/view-client-metadata/view-client-metadata.component.html
+++ b/libs/oidc/admin/src/lib/modules/client-metadata/view-client-metadata/view-client-metadata.component.html
@@ -1,1 +1,14 @@
-<p>view-client-metadata works!</p>
+<table>
+  <tr>
+    <th>Guid</th>
+    <th>Name</th>
+    <th>Email</th>
+    <th>Enabled 2FA?</th>
+  </tr>
+  <tr *ngFor="let client of ($clients | async)">
+    <td>{{client.guid}}</td>
+    <td>{{user.account.name}}</td>
+    <td>{{user.email}}</td>
+    <td>{{user.enabled2fa}}</td>
+  </tr>
+</table>
