Role edit/ view/ add/ delete working

--- a/libs/oidc/admin/src/lib/modules/roles/edit-role/detail-role/detail-role.component.html
+++ b/libs/oidc/admin/src/lib/modules/roles/edit-role/detail-role/detail-role.component.html
@@ -2,8 +2,8 @@
   <div class="form-section">
     <div class="form-section-body">
       <div class="form-collection row pad-top">
+        <input type="hidden" formControlName="guid" />
         <tamu-gisc-textbox formControlName="name" placeholder="Role name" type="text" floatLabel="true"></tamu-gisc-textbox>
-
         <tamu-gisc-textbox formControlName="level" placeholder="Role level" type="text" floatLabel="true"></tamu-gisc-textbox>
       </div>
     </div>
