--- a/apps/oidc-admin-angular/src/app/app.component.html
+++ b/apps/oidc-admin-angular/src/app/app.component.html
@@ -11,6 +11,21 @@
         <p>Client Metadata</p>
       </div>
 
+      <div class="menu-item" [routerLink]="['grant-types']" routerLinkActive="active">
+        <span class="material-icons">add_box</span>
+        <p>Grant Types</p>
+      </div>
+
+      <div class="menu-item" [routerLink]="['response-types']" routerLinkActive="active">
+        <span class="material-icons">add_box</span>
+        <p>Response Types</p>
+      </div>
+
+      <div class="menu-item" [routerLink]="['token-auth-methods']" routerLinkActive="active">
+        <span class="material-icons">add_box</span>
+        <p>Token Auth Methods</p>
+      </div>
+
       <div class="menu-item" [routerLink]="['users']" routerLinkActive="active">
         <span class="material-icons">people</span>
         <p>Users</p>
